--- a/src/app/web/manifest.json
+++ b/src/app/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "somenet",
-    "short_name": "somenet",
+    "name": "vicentinos",
+    "short_name": "vicentinos",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
