--- a/src/app/windows/CMakeLists.txt
+++ b/src/app/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(somenet LANGUAGES CXX)
+project(vicentinos LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "somenet")
+set(BINARY_NAME "vicentinos")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
