--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -13,13 +13,13 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: install docker compose
-      run: . ./env/install.sh
+      run: . ./env/apt.install.sh
     
     - name: flutter version
       run: . ./env/flutter.version.sh
 
     - name: build android app file
-      run: . ./env/apk.sh
+      run: . ./env/flutter.build.apk.sh
 
     - name: Create release
       run: gh release create v$( date +%Y%m%d%H%M ) ./src/app/build/app/outputs/flutter-apk/app-release.apk
