--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "vscjava.vscode-gradle"
+        "vscjava.vscode-gradle",
+        "dart-code.flutter"
     ]
 }
